# OpenGLText

./: .gitignore  CMakeLists.txt  OpenGLText.cpp  OpenGLText.h  README.md
cmake/: FindGLEW.cmake  FindGLUT.cmake
example/: CMakeLists.txt  Candy Script_48.tga  Shelley Allegro BT_26.tga  arial_10.h  arial_10_bitmap.h  baub_16.tga  example.cpp  example_.cpp  example_nv.cpp
textBaker/: README.md
textBaker/gltext-0.3.1_patch/examples/bakeFonts/: bakeFonts.cpp  bakeFonts.sln  bakeFonts.vcproj
textBaker/gltext-0.3.1_patch/src/: AbstractRenderer.cpp  AbstractRenderer.h  AbstractRenderer_patch.cpp  AbstractRenderer_patch.h  FTGlyph.cpp  FTGlyph.h  FTGlyph_patch.cpp  FTGlyph_patch.h  GLTextureGlyph.cpp  glTextureGlyph_patch.cpp  gltext.h  gltext_patch.h
textBaker/gltext-0.3.1_patches/examples/bakeFonts/: Makefile.am  Makefile.in  bakeFonts.vcproj
textBaker/gltext-0.3.1_patches/src/: AbstractRenderer.cpp  AbstractRenderer.h  FTGlyph.cpp  FTGlyph.h  gltext.h  tga.h
